# anymodel-py

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: basic.py
scripts/: fetch_pricing.py
src/anymodel/: __init__.py  _cli.py  _client.py  _config.py  _router.py  _server.py  _types.py
src/anymodel/batch/: __init__.py  _builder.py  _manager.py  _store.py
src/anymodel/providers/: __init__.py  _adapter.py  _anthropic.py  _anthropic_batch.py  _custom.py  _google.py  _google_batch.py  _openai.py  _openai_batch.py  _perplexity.py  _registry.py
src/anymodel/utils/: __init__.py  _fs_io.py  _generation_stats.py  _id.py  _model_parser.py  _rate_limiter.py  _retry.py  _timeout.py  _token_estimate.py  _transforms.py  _validate.py
tests/: conftest.py  test_batch_store.py  test_model_parser.py  test_transforms.py  test_types.py  test_validate.py
