[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anymodel-py"
version = "0.4.0"
description = "OpenRouter-compatible LLM router with unified batch support. Route requests across OpenAI, Anthropic, and Google with a single API."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Probeo", email = "dev@probeo.io" }]
keywords = ["llm", "openai", "anthropic", "gemini", "router", "batch", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "aiofiles>=24.1",
]

[project.optional-dependencies]
server = ["starlette>=0.40", "uvicorn>=0.30"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
    "respx>=0.22",
]

[project.scripts]
anymodel = "anymodel._cli:main"

[project.urls]
Homepage = "https://github.com/probeo-io/anymodel-py"
Repository = "https://github.com/probeo-io/anymodel-py"
Issues = "https://github.com/probeo-io/anymodel-py/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/anymodel"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
strict = true
python_version = "3.10"
